...
object BoardDescrUtils {
    private val logger = LoggerProvider.getLogger("BoardDescrUtils")

    private fun syntheticBoardDescr(): Map<String, Any?> {
        val eegNames = "Fz,C3,Cz,C4,Pz,PO7,Oz,PO8,F5,F7,F3,F1,F2,F4,F6,F8"
        return mapOf<String, Any?>(
            "name" to "Synthetic",
            "num_rows" to 32,
            "sampling_rate" to 250,
            "timestamp_channel" to 30,
            "eeg_channels" to (1..16).toList(),
            "eeg_names" to eegNames,
            "gyro_channels" to (20..22).toList(),
...
